# tui-stock

./: .gitignore  CMakeLists.txt  README.md  ideas.md  main  package-lock.json  package.json  shell.nix
include/: app.h  data.h  interact.h
src/: app.c  app.h  data.c  interact.c  main.c
src/api/: get-price-and-indicator.js  get_user_credentials.js
src/data/: data.json  data.yml  price-indicator.yml
